# pawmap

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  README.md  compose.yaml  render.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature.md  task.md
.github/workflows/: ci.yml
apps/api/: .env.example  Dockerfile  README.md  pyproject.toml
apps/api/app/: config.py  db.py  env.py  google_collection.py  google_ingestion.py  main.py  models.py  repository.py  web_source_ingestion.py
apps/api/data/google/: kingston-dog-ownership-seed.json  melbourne-fitzroy-sample.json
apps/api/data/google/collection-fixtures/melbourne-fitzroy/: cafe.json  park.json  restaurant.json
apps/api/data/google/collections/: melbourne-beaumaris.json  melbourne-cheltenham.json  melbourne-fitzroy.json  melbourne-highett.json  melbourne-mentone.json  melbourne-parkdale.json  melbourne-sandringham.json
apps/api/data/pawmap/: kingston-dog-ownership-bundle.json
apps/api/migrations/: 0001_init.sql
apps/api/tests/: test_google_collection.py  test_google_ingestion.py  test_smoke.py  test_web_source_ingestion.py
apps/mobile/: .env.example  README.md  app.json  expo-env.d.ts  package-lock.json  package.json  tsconfig.json  vercel.json
apps/web/: .env.local.example  package-lock.json  package.json  tailwind.config.ts  vitest.config.ts
docs/: adr-001-repo-and-workflow.md  api-contract.md  architecture.md  data-model.md  deployment-netlify-render-neon.md  prd.md  ux-001-search-map-detail-spec.md
tasks/: README.md  backlog.md  release-checklist.md
(+70 files in other folders)
